# xiaoshuo

./: .editorconfig  .env  .env.example  .env.example.bak-20251224104846  .gitignore  .xiaoshuo_repo_root  AGENTS.md  AI小说写作系统_项目进展_2025-12-26.docx  AI小说写作系统：外部模型接入与结构化数据集成方案.docx  README.md  git提交覆盖方法.txt  pyproject.toml  requirements.txt  双机AI小说系统_阶段总结与下一步规划2025.12.24.docx  双机协同AI小说写作系统_实施纪要与操作说明_v1.0.docx  小说流水线_使用与配置指南.md  新开小说说明书.md  每日运行方法  每日运行方法.md
canon/: premise.md  premise.md.bak
configs/: app.yaml  logging.yaml  memory.yaml  memory_ontology_v1.yaml
docs/: TOOLING.md  api.md  architecture.md  directory_structure.md  directory_structure.md.bak-20251223084428  manual_fallback_feasibility.md  memory_chroma.md  memory_healthcheck.md  memory_neo4j.md  repo_audit_report.md  repo_audit_report.md.bak-20251223164516  repo_audit_report.md.bak-20251223164611  repo_audit_report.md.bak-20251223164925  usage.md
inputs/: project_brief.json  project_brief.json.bak  project_brief.json.bak2  project_brief.md  project_brief.yaml.bak  project_brief.yaml.bak2
manuscript/: ch001.md  ch002.md  ch003.md  ch004.md  ch005.md  ch006.md  ch007.md
outline/: master_outline.md  master_outline.md.bak
pipelines/: daily_pipeline.md
recap/: rolling_recap.md  rolling_recap.md.bak  rolling_recap.md.bak10  rolling_recap.md.bak11  rolling_recap.md.bak12  rolling_recap.md.bak13  rolling_recap.md.bak14  rolling_recap.md.bak2  rolling_recap.md.bak3  rolling_recap.md.bak4  rolling_recap.md.bak5  rolling_recap.md.bak6  rolling_recap.md.bak7  rolling_recap.md.bak8  rolling_recap.md.bak9
(+266 files in other folders)
