[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaoshuo-ai"
version = "0.1.0"
description = "Scaffold for a dual-machine AI novel writing system with Neo4j and Chroma memories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
authors = [
  { name = "xiaoshuo team", email = "dev@xiaoshuo.local" }
]

[project.scripts]
xiaoshuo = "xiaoshuo_ai.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
