[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaoshuo-ai"
version = "0.0.1"
description = "Dual-machine AI novel writing system scaffold with Neo4j and Chroma memories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
xiaoshuo = "xiaoshuo_ai.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
